force-app/main/default/objects/Contract/fields/Mileage_reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Mileage_reimbursement__c</fullName>
    <label>Mileage reimbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>