force-app/main/default/objects/Contract/fields/NAV_Cust__c.field-meta.xml
<CustomField>
    <fullName>NAV_Cust__c</fullName>
    <formula>Account.NAV_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV Cust #</label>
    <type>Text</type>
</CustomField>