force-app/main/default/objects/Contract/fields/Negotiated_Terms__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Terms__c</fullName>
    <label>Negotiated Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>