force-app/main/default/objects/Contract/fields/Non_Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Non_Solicitation__c</fullName>
    <label>Non-Solicitation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prosci may not solicit</fullName>
            </value>
            <value>
                <fullName>Company may not solicit</fullName>
            </value>
            <value>
                <fullName>Neither party may solicit</fullName>
            </value>
            <value>
                <fullName>No Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>