force-app/main/default/objects/Contract/fields/Not_applicable__c.field-meta.xml
<CustomField>
    <fullName>Not_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not applicable</label>
    <type>Checkbox</type>
</CustomField>