force-app/main/default/objects/Contract/fields/Notice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Notice_Contact__c</fullName>
    <label>Notice Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>