force-app/main/default/objects/Contract/fields/Notice_copies__c.field-meta.xml
<CustomField>
    <fullName>Notice_copies__c</fullName>
    <label>Notice copies</label>
    <length>100</length>
    <type>Text</type>
</CustomField>