force-app/main/default/objects/Contract/fields/Notification_Oblig_in_Event_of_CI_Breach__c.field-meta.xml
<CustomField>
    <fullName>Notification_Oblig_in_Event_of_CI_Breach__c</fullName>
    <label>CI Breach - PSA Notification Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - see Legal Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>