force-app/main/default/objects/Contract/fields/number_of_portal_users__c.field-meta.xml
<CustomField>
    <fullName>number_of_portal_users__c</fullName>
    <label>Number of portal users</label>
    <length>10</length>
    <type>Text</type>
</CustomField>