force-app/main/default/objects/Contract/fields/Obligation_for_Return_or_Destruct_of_CI__c.field-meta.xml
<CustomField>
    <fullName>Obligation_for_Return_or_Destruct_of_CI__c</fullName>
    <label>Obligation for Return or Destruct of CI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Destroy/Destruct</fullName>
            </value>
            <value>
                <fullName>Certify to Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>