force-app/main/default/objects/Contract/fields/Occurrence_for_Return_or_Destruct_of_CI__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_for_Return_or_Destruct_of_CI__c</fullName>
    <inlineHelpText>Occurrence refers to the triggering event creating obligation for Prosci.</inlineHelpText>
    <label>Occurrence for Return or Destruct of CI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>