force-app/main/default/objects/Contract/fields/Onsite_Requirements_for_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Requirements_for_Personnel__c</fullName>
    <label>Onsite Requirements for Personnel</label>
    <type>TextArea</type>
</CustomField>