force-app/main/default/objects/Contract/fields/Optional_renewal_details__c.field-meta.xml
<CustomField>
    <fullName>Optional_renewal_details__c</fullName>
    <label>Optional renewal details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>