force-app/main/default/objects/Contract/fields/Optional_renewal_periods__c.field-meta.xml
<CustomField>
    <fullName>Optional_renewal_periods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional renewal periods</label>
    <type>Checkbox</type>
</CustomField>