force-app/main/default/objects/Contract/fields/Owner_of_Customized_Docs_or_Work_Product__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Customized_Docs_or_Work_Product__c</fullName>
    <inlineHelpText>The entity selected owns any work product created under this License and any intellectual property that is added to the Customized Documents</inlineHelpText>
    <label>Owner of Customized Docs or Work Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Licensee</fullName>
            </value>
            <value>
                <fullName>Not Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>