force-app/main/default/objects/Contract/fields/Paid_License_Fees_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Paid_License_Fees_Upfront__c</fullName>
    <label>Paid License Fees Upfront</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>