force-app/main/default/objects/Contract/fields/payment_terms_other__c.field-meta.xml
<CustomField>
    <fullName>payment_terms_other__c</fullName>
    <label>Payment Terms - Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>