force-app/main/default/objects/Contract/fields/Per_Day_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Requirement__c</fullName>
    <label>Per Day Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>