force-app/main/default/objects/Contract/fields/Policies__c.field-meta.xml
<CustomField>
    <fullName>Policies__c</fullName>
    <label>Additional Insured Policies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial General Liability</fullName>
            </value>
            <value>
                <fullName>Automobile Liability</fullName>
            </value>
            <value>
                <fullName>Umbrella_Policy</fullName>
                <label>Umbrella Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>