force-app/main/default/objects/Contract/fields/Portal_access__c.field-meta.xml
<CustomField>
    <fullName>Portal_access__c</fullName>
    <label>Portal access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>