force-app/main/default/objects/Contract/fields/portal_access_details_other__c.field-meta.xml
<CustomField>
    <fullName>portal_access_details_other__c</fullName>
    <label>Portal Access Details - Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>