force-app/main/default/objects/Contract/fields/portal_subscription_details__c.field-meta.xml
<CustomField>
    <fullName>portal_subscription_details__c</fullName>
    <label>Portal Subscription Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>