force-app/main/default/objects/Contract/fields/Portal_tools__c.field-meta.xml
<CustomField>
    <fullName>Portal_tools__c</fullName>
    <label>Portal tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All current and any developed</fullName>
            </value>
            <value>
                <fullName>All current</fullName>
            </value>
            <value>
                <fullName>Limited set</fullName>
                <label>Limited Set, see Limited Set of Portal Tools Details</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>