force-app/main/default/objects/Contract/fields/PSA_Assignment__c.field-meta.xml
<CustomField>
    <fullName>PSA_Assignment__c</fullName>
    <label>PSA Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neither party may assign</fullName>
            </value>
            <value>
                <fullName>Both parties may assign in any event</fullName>
            </value>
            <value>
                <fullName>Prosci may assign in any event</fullName>
            </value>
            <value>
                <fullName>Company may assign in any event</fullName>
            </value>
            <value>
                <fullName>Both parties may assign in case of a sale, transfer, etc.</fullName>
            </value>
            <value>
                <fullName>Prosci may assign in the case of a sale, transfer, etc.</fullName>
            </value>
            <value>
                <fullName>Company may assign in the case of a sale, transfer, etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>