force-app/main/default/objects/Contract/fields/PSA_Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>PSA_Choice_of_Law__c</fullName>
    <label>PSA Choice of Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - see Legal Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>