force-app/main/default/objects/Contract/fields/PSA_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>PSA_Contract_Term__c</fullName>
    <label>PSA Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>One year</fullName>
            </value>
            <value>
                <fullName>Two year</fullName>
            </value>
            <value>
                <fullName>Three year</fullName>
            </value>
            <value>
                <fullName>Five year</fullName>
            </value>
            <value>
                <fullName>Other, see below</fullName>
                <label>Other - see General Contract Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>