force-app/main/default/objects/Contract/fields/PSA_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>PSA_Generated_Date__c</fullName>
    <formula>Related_Opportunity__r.PSA_Generated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Generated Date</label>
    <type>Date</type>
</CustomField>