force-app/main/default/objects/Contract/fields/PSA_Invoice_Requirements__c.field-meta.xml
<CustomField>
    <fullName>PSA_Invoice_Requirements__c</fullName>
    <label>PSA Invoice Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order Number</fullName>
            </value>
            <value>
                <fullName>SOW or Applicable Contract Number</fullName>
            </value>
            <value>
                <fullName>Date(s) of Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>