force-app/main/default/objects/Contract/fields/PSA_Method_to_Provide_Notice__c.field-meta.xml
<CustomField>
    <fullName>PSA_Method_to_Provide_Notice__c</fullName>
    <label>PSA Method to Provide Notice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic mail</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>