force-app/main/default/objects/Contract/fields/PSA_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>PSA_Payment_Terms__c</fullName>
    <label>PSA Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - see Payment Terms - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>