force-app/main/default/objects/Contract/fields/PSA_Termination_date__c.field-meta.xml
<CustomField>
    <fullName>PSA_Termination_date__c</fullName>
    <label>PSA Termination date</label>
    <type>Date</type>
</CustomField>