force-app/main/default/objects/Contract/fields/Publicity__c.field-meta.xml
<CustomField>
    <fullName>Publicity__c</fullName>
    <label>Publicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prohibited</fullName>
            </value>
            <value>
                <fullName>With permission</fullName>
            </value>
            <value>
                <fullName>No restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>