force-app/main/default/objects/Contract/fields/Reqs_for_subcontracting__c.field-meta.xml
<CustomField>
    <fullName>Reqs_for_subcontracting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If box is checked, see requirement details below.  If not checked, Prosci is not subject to any additional requirements.</inlineHelpText>
    <label>Reqs for subcontracting</label>
    <type>Checkbox</type>
</CustomField>