force-app/main/default/objects/Contract/fields/Requirements_for_using_subcontractors__c.field-meta.xml
<CustomField>
    <fullName>Requirements_for_using_subcontractors__c</fullName>
    <inlineHelpText>These are the requirements the client insists on for using subcontractors, including GAN-run programs.</inlineHelpText>
    <label>Requirements for using subcontractors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Drug Screening</fullName>
            </value>
            <value>
                <fullName>Confidentiality Agreement/NDA</fullName>
            </value>
            <value>
                <fullName>Data Privacy Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>