force-app/main/default/objects/Contract/fields/Requirements_on_CI_recipients__c.field-meta.xml
<CustomField>
    <fullName>Requirements_on_CI_recipients__c</fullName>
    <label>Requirements on CI recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>