force-app/main/default/objects/Contract/fields/Retention_requirements__c.field-meta.xml
<CustomField>
    <fullName>Retention_requirements__c</fullName>
    <label>Retention requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>