force-app/main/default/objects/Contract/fields/Right_to_unionize__c.field-meta.xml
<CustomField>
    <fullName>Right_to_unionize__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Right to unionize</label>
    <type>Checkbox</type>
</CustomField>