force-app/main/default/objects/Contract/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security</label>
    <type>Checkbox</type>
</CustomField>