force-app/main/default/objects/Contract/fields/Shipping_requirements__c.field-meta.xml
<CustomField>
    <fullName>Shipping_requirements__c</fullName>
    <label>Shipping Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>