force-app/main/default/objects/Contract/fields/sow_format__c.field-meta.xml
<CustomField>
    <fullName>sow_format__c</fullName>
    <inlineHelpText>If &quot;Prosci,&quot; standard SOW template may be used. If &quot;Company,&quot; look in Agreement for exhibit containing required SOW template.</inlineHelpText>
    <label>SOW Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>