force-app/main/default/objects/Contract/fields/Special_Requirements_Other__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_Other__c</fullName>
    <label>Special Requirements - Other</label>
    <type>TextArea</type>
</CustomField>