force-app/main/default/objects/Contract/fields/Special_Update_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Update_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Update Requirements</label>
    <type>Checkbox</type>
</CustomField>