force-app/main/default/objects/Contract/fields/Standard_of_Care_for_Confidential_Info__c.field-meta.xml
<CustomField>
    <fullName>Standard_of_Care_for_Confidential_Info__c</fullName>
    <label>Standard of Care for Confidential Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reasonable</fullName>
            </value>
            <value>
                <fullName>Heightened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>