force-app/main/default/objects/Contract/fields/Sub_license__c.field-meta.xml
<CustomField>
    <fullName>Sub_license__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked, this means that the Contact is not directly with Prosci.</inlineHelpText>
    <label>Sub license</label>
    <type>Checkbox</type>
</CustomField>