force-app/main/default/objects/Contract/fields/Sub_licensee__c.field-meta.xml
<CustomField>
    <fullName>Sub_licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is who the contract with the client is with, it should never say Prosci in this field.  Likely to be GAN.</inlineHelpText>
    <label>Sub licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>