force-app/main/default/objects/Contract/fields/Subcontracting_Requirements_Other__c.field-meta.xml
<CustomField>
    <fullName>Subcontracting_Requirements_Other__c</fullName>
    <label>Subcontracting Requirements - Other</label>
    <type>TextArea</type>
</CustomField>