force-app/main/default/objects/Contract/fields/System_Access_Requirements__c.field-meta.xml
<CustomField>
    <fullName>System_Access_Requirements__c</fullName>
    <inlineHelpText>This field captures what is required of Prosci Personnel when using or accessing the client’s networks, wifi, and other systems.</inlineHelpText>
    <label>System Access Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>