force-app/main/default/objects/Contract/fields/term_of_portal_subscription__c.field-meta.xml
<CustomField>
    <fullName>term_of_portal_subscription__c</fullName>
    <inlineHelpText>If &apos;Yes, while an active licensee&apos;, please look under Active Licensee Details to confirm Active Licensee Status shows &apos;Active.&apos;</inlineHelpText>
    <label>Term of Portal Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>While an Active Licensee</fullName>
            </value>
            <value>
                <fullName>Annual subscription</fullName>
            </value>
            <value>
                <fullName>Term of License</fullName>
            </value>
            <value>
                <fullName>Other - Portal Subscription Detials</fullName>
            </value>
            <value>
                <fullName>Other subscription type</fullName>
                <isActive>false</isActive>
                <label>Other subscription type</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>