force-app/main/default/objects/Contract/fields/Terms_of_Agreement_or_PO_prevail__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Agreement_or_PO_prevail__c</fullName>
    <label>Terms of Agreement or PO prevail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Purchase_Order</fullName>
                <label>Purchase Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>