force-app/main/default/objects/Contract/fields/Testing_Expire_date_automation__c.field-meta.xml
<CustomField>
    <fullName>Testing_Expire_date_automation__c</fullName>
    <label>Testing Expire date automation</label>
    <type>Date</type>
</CustomField>