force-app/main/default/objects/Contract/fields/Thriving_Through_Change_eLearning__c.field-meta.xml
<CustomField>
    <fullName>Thriving_Through_Change_eLearning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thriving Through Change eLearning</label>
    <type>Checkbox</type>
</CustomField>