force-app/main/default/objects/Contract/fields/timeline_for_changes_to_insurance_policy__c.field-meta.xml
<CustomField>
    <fullName>timeline_for_changes_to_insurance_policy__c</fullName>
    <label>Timeline for changes to insurance policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promptly</fullName>
            </value>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>45 days</fullName>
            </value>
            <value>
                <fullName>other, see below</fullName>
                <label>Other - see Insurance Requirements - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>