force-app/main/default/objects/Contract/fields/Timeline_to_Invoice_after_LIcense__c.field-meta.xml
<CustomField>
    <fullName>Timeline_to_Invoice_after_LIcense__c</fullName>
    <label>Timeline to Invoice after License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>Other, see Additional Invoicing Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>