force-app/main/default/objects/Contract/fields/Timeline_to_Invoice_after_Services__c.field-meta.xml
<CustomField>
    <fullName>Timeline_to_Invoice_after_Services__c</fullName>
    <inlineHelpText>We must invoice the company within the required timeline after completion of Services, otherwise we forfeit the right to payment.</inlineHelpText>
    <label>Timeline to Invoice after Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - see Finance Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>