force-app/main/default/objects/Contract/fields/Total_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Risk_Score__c</fullName>
    <label>Total Risk Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>