force-app/main/default/objects/Contract/fields/Trademark_logo_restriction__c.field-meta.xml
<CustomField>
    <fullName>Trademark_logo_restriction__c</fullName>
    <inlineHelpText>If the selection is ‘Cannot use Client’s TM/Logos publicly’, please contact Legal if we wish to request permission to use TM/Logos publicly</inlineHelpText>
    <label>Can we use Client&apos;s TM/Logos publicy?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Able to use client’s TM/Logos publicly</fullName>
            </value>
            <value>
                <fullName>Cannot use client’s TM/Logos publicly</fullName>
            </value>
            <value>
                <fullName>No Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>