force-app/main/default/objects/Contract/fields/Travel_Logistic__c.field-meta.xml
<CustomField>
    <fullName>Travel_Logistic__c</fullName>
    <label>Travel/Logistics Details - Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>