force-app/main/default/objects/Contract/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <label>Venue</label>
    <type>TextArea</type>
</CustomField>