force-app/main/default/objects/Contract/fields/What_is_not_Confidential_Information__c.field-meta.xml
<CustomField>
    <fullName>What_is_not_Confidential_Information__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <label>What is not Confidential Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>