force-app/main/default/objects/Contract/fields/What_Prosci_can_do_with_CI__c.field-meta.xml
<CustomField>
    <fullName>What_Prosci_can_do_with_CI__c</fullName>
    <label>What Prosci can do with CI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>