force-app/main/default/objects/Contract/fields/What_Prosci_cannot_do_with_it__c.field-meta.xml
<CustomField>
    <fullName>What_Prosci_cannot_do_with_it__c</fullName>
    <label>What Prosci cannot do with it</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>