force-app/main/default/objects/Contract/fields/When_notice_is_required__c.field-meta.xml
<CustomField>
    <fullName>When_notice_is_required__c</fullName>
    <label>When is notice required for changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Event</fullName>
            </value>
            <value>
                <fullName>After Event</fullName>
            </value>
            <value>
                <fullName>Other, see below</fullName>
                <label>Other - see Insurance Requirements - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>