force-app/main/default/objects/Contract/fields/Whistleblower__c.field-meta.xml
<CustomField>
    <fullName>Whistleblower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whistleblower</label>
    <type>Checkbox</type>
</CustomField>