force-app/main/default/objects/Contract/fields/Who_is_hositng_electronic_tools__c.field-meta.xml
<CustomField>
    <fullName>Who_is_hositng_electronic_tools__c</fullName>
    <inlineHelpText>This only covers eToolkit or eLearning</inlineHelpText>
    <label>Who is Hosting electronic tools?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>