force-app/main/default/objects/Contract/fields/Who_may_receive_ci__c.field-meta.xml
<CustomField>
    <fullName>Who_may_receive_ci__c</fullName>
    <label>Who may receive CI?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prosci Employees with a Need to Know</fullName>
            </value>
            <value>
                <fullName>Prosci Affiliates with a Need to know</fullName>
            </value>
            <value>
                <fullName>Prosci Employees who have agreed in writing to maintain confidentiality</fullName>
            </value>
            <value>
                <fullName>Prosci Affiliates who have agreed in writing to maintain confidentiality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>