force-app/main/default/objects/Contract/fields/Whose_agreement_template__c.field-meta.xml
<CustomField>
    <fullName>Whose_agreement_template__c</fullName>
    <label>Whose agreement template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
                <default>true</default>
                <label>Prosci</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>