force-app/main/default/objects/Contract/fields/Work_Product__c.field-meta.xml
<CustomField>
    <fullName>Work_Product__c</fullName>
    <label>Owner of Work Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Not Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>